--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+
+<head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
@@ -9,29 +10,72 @@
   <link rel="stylesheet" href="styles/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div id="app">
-   <main>
-    <div class="main-container">
-      <div class="back">
-        <img src="assets/icons/icons 1/arrow-left-02.svg" alt="Icone de voltar">
-        <span>Voltar</span>
-      </div>
-      <h1>Formulário de matrícula</h1>
-      <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
-    </div>
-   </main>
-   <aside>
-    <div class="aside-container">
-      <header>
-        <img src="./assets/logo.svg" alt="Estrelas do Amanhã">
-        <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
-        <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
-      </header>
+    <main>
+      <div class="main-container">
+        <div class="back">
+          <img src="assets/icons/icons 1/arrow-left-02.svg" alt="Icone de voltar">
+          <span>Voltar</span>
+        </div>
+        <h1>Formulário de matrícula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
 
-      <img src="./assets/Illustration.svg" alt="ilustração de uma professora com crianças">
-    </div>
-   </aside>
+        <form method="pos" enctype="multipart/form-data">
+          <fieldset class="child-info">
+            <legend>Informações da criança</legend>
+
+            <div class="input-wrapper">
+              <label for="fullname">Nome completo</label>
+              <input id="fullname" name="fullname" type="text" placeholder="Qual o nome da criança">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="date-birth">Data de nascimento</label>
+              <input id="date-birth" name="date-birth" type="date" lang="pt-BR">
+            </div>
+
+            <div class="select-wrapper">
+              <label for="gender">Sexo</label>
+              <select name="gender" id="gender">
+                <option value="female">Feminino</option>
+                <option value="male">Masculino</option>
+                <option value="na">Prefiro não responder</option>
+              </select>
+            </div>
+
+            <div class="textarea-wrapper">
+              <label for="medical-info">Informações médicas</label>
+              <textarea name="medical-info" id="medical-info"  cols="30"
+              rows="10" placeholder="A criança possui alguma condição médica que a escola deve estar cinte?"></textarea>
+            </div>
+
+            <div class="droparea-wrapper">
+              <input id="birth-file" name="birth-file" type="file">
+              <img src="./assets/icons/icons 1/cloud-upload.svg" alt="">
+              <p>Clique aqui para <br>selecionar os arquivos</p>
+            
+            </div>
+          </fieldset>
+        </form>
+
+      </div>
+
+    </main>
+
+    <aside>
+      <div class="aside-container">
+        <header>
+          <img src="./assets/logo.svg" alt="Estrelas do Amanhã">
+          <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+        </header>
+
+        <img src="./assets/Illustration.svg" alt="ilustração de uma professora com crianças">
+      </div>
+    </aside>
   </div>
 </body>
+
 </html>
