Configurando os inputs de data e select

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <main>
       <div class="main-container">
         <div class="back">
-          <img src="assets/icons/icons 1/arrow-left-02.svg" alt="Icone de voltar">
+          <img src="assets/icons/icons1/arrow-left-02.svg" alt="Icone de voltar">
           <span>Voltar</span>
         </div>
         <h1>Formulário de matrícula</h1>
         <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
 
-        <form method="pos" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data">
           <fieldset class="child-info">
             <legend>Informações da criança</legend>
 
