--- a/index.html
+++ b/index.html
@@ -94,6 +94,31 @@
               </div>
             </div>
           </fieldset>
+          
+          <fieldset class="responsible-info">
+            <legend>Informações do responsável</legend>
+            <div class="input-wrapper">
+              <label for="responsible">Nome do responsável</label>
+              <input type="text" id="responsible" name="responsible">
+              <small>Principal responsável legal e contato de emergência</small>
+            </div>
+
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="text" id="phone" name="phone" placeholder="(10) 9 8765-4321">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="mail">E-mail</label>
+              <input type="email" id="mail" name="mail"  required>
+              <div class="error">
+                <img src="./assets/icons/alert-circle.svg" alt="Icone de alerta vermelho">
+                <span>Insira um e-mail válido</span>
+              </div>
+            </div>
+
+
+          </fieldset>
         </form>
 
       </div>
