--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   <img src="./assets/icons/icons2/swimming.svg" alt="icone de uma pessoa nadando">
                   <label for="swimming">Natação</label>
                 </div>
-                
+
                 <div class="radio-inner">
                   <div class="radio-image"></div>
                   <input type="radio" name="sport" value="yoga" id="yoga">
@@ -191,10 +191,15 @@
                 </div>
               </div>
             </div>
-
-
-
           </fieldset>
+
+          <div class="terms-wrapper input-wrapper checkbox-wrapper">
+            <div class="checkbox-image"></div>
+            <input type="checkbox" name="terms" id="terms">
+            <label for="terms">Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. </label>
+
+          </div>
+
         </form>
 
       </div>
