--- a/index.html
+++ b/index.html
@@ -195,15 +195,18 @@
 
           <div class="terms-wrapper input-wrapper checkbox-wrapper">
             <div class="checkbox-image"></div>
-            <input type="checkbox" name="terms" id="terms">
+            <input type="checkbox" name="terms" id="terms" required>
             <label for="terms">Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. </label>
-
           </div>
-
         </form>
 
-      </div>
+        <div class="actions-wrapper">
+          <button class="btn-secondary" type="button">Salvar respostas</button>
 
+          <button class="btn-primary" type="submit">Fazer matrícula</button>
+        </div>
+
+      </div>
     </main>
 
     <aside>
